--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numpy = "^1.26.4"
 mcda = "0.6.1"
 graphviz = "^0.20.3"
 pulp = "^2.8.0"
+tqdm = "^4.66.4"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
